<resources>
    <string name="app_name">Practical4</string>
    <string name="name_label_text">"Name : "</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label_text">"Address : "</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="phone_label_text">Phone :</string>
    <string name="enter_phone_hint">Enter phone</string>
    <string name="email_label_text">Email :</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="delivery_method_label_text">Choose a delivery method</string>
    <string name="delivery_today">Food delivered today</string>
    <string name="delivery_nextday">Food delivered tomorrow</string>
    <string name="delivery_pickup">Food pick up by you</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_date">DATE</string>
</resources>